@@ -9,3 +9,4 @@ require "test/tc_data_set"
 require "test/tc_data_row"
 require "test/tc_taggable"
 require "test/tc_record"
+require "test/tc_table"
